# miniEngine

./: .gitignore  CMakeLists.txt
src/: camera.hpp  main.cpp  shader.hpp
src/shaders/: basic_lighting.fs  basic_lighting.vs  fs.glsl
